fix: remove gap from info card for improved layout

--- a/style.css
+++ b/style.css
@@ -555,11 +555,10 @@ header {
 .info-card {
     display: grid;
     grid-template-columns: auto auto;
-    gap: 20px;
+    /* gap: 20px; */
     width: 100%;
     height: 100%;
     margin-top: 30px;
-    margin-right: auto;
 }
 
 .card {
